-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
Copyright (c) 1996-2016 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.

For change history for MOST, see most/docs/CHANGES.

Changes since 5.1
-----------------

5/25/16
    - Add contributed code from Camille Hamon to extras/maxloadlim for
      finding the loadability limits in power systems based on an optimal
      power flow using dispatchable loads.

5/24/16
    - Fix bug in toggle_dclines() that resulted in fatal error when
      used with OPF with reactive power costs. Thanks to Irina Boiarchuk.
    - Add option to call total_load() with full case struct, instead
      of separate bus and gen matrices.

5/18/16
    - Add plot_mpc(), contributed by Paul Cuffe, to extras/misc. Plots
      an electrically meaningful drawing of a MATPOWER case.
    - Add case145.m, IEEE 145 bus, 50 generator dynamic test case from
      http://www.ee.washington.edu/research/pstca/dyn50/pg_tcadd50.htm.

5/17/16
    - Add 9 new case files, 8 cases ranging from 1888 to 6515 buses
      representing the French system, and a 13,659-bus case representing
      parts of the of the European high voltage transmission network,
      stemming from the Pan European Grid Advanced Simulation and State
      Estimation (PEGASE) project. Thanks again to Cedric Josz and
      colleagues from the French Transmission System Operator.
    - Add extras/misc/qcqp_opf.m, by Cedric Josz, et. al.

5/3/16
    - Fix fatal bug in update_mupq() affecting cases where QMIN is
      greater than or equal to QC1MIN and QC2MIN (or QMAX is less than
      or equal to QC1MAX and QC2MAX) for all generators.
      Thanks Jose Miguel.

3/29/16
    - Add support for quadprog() under GNU Octave.

3/3/16
    - Copying a field containing a struct to a non-struct field with 